# mines

./: Readme.md
client/: index.html  package-lock.json  script.js
server/: Cargo.toml
server/data/: adjectives.txt  animals.txt
server/src/: board.rs  encoding.rs  main.rs  names.rs  player_list.rs
